--- a/html/blogs.html
+++ b/html/blogs.html
@@ -28,25 +28,28 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" onclick="closeNavbar()" href="../index.html">Home</a>
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle show" href="../html/features.html" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">Features</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
+              <li><a class="dropdown-item" href="../html/blogs.html">Blogs</a></li>
+            </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="closeNavbar()" href="./features.html">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" onclick="closeNavbar()" href="./faqs.html">FAQs</a>
+            <a class="nav-link" href="../html/faqs.html">FAQs</a>
           </li>
           <li class="nav-item lrg">
             <a class="navbar-brand lrg-logo" href="../index.html"><img src="../img/logo.png" alt="Logo" width="253" height="69"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="closeNavbar()" href="../cbms/login.html">Member Login</a>
+            <a class="nav-link" href="../cbms/login.html">Member Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="closeNavbar()" href="./contact-us.html">Contact Us</a>
+            <a class="nav-link" href="../html/contact-us.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="closeNavbar()" href="./trusted-partners.html">Trusted Partners</a>
+            <a class="nav-link" href="../html/trusted-partners.html">Trusted Partners</a>
           </li>
         </ul>
       </div>
@@ -58,12 +61,12 @@
   <div class="row justify-content-center">
     <!-- section1 start-->
     <div class="col-lg-10 col-11">
-      <section class="section1 banner container d-flex align-items-lg-center justify-content-lg-center">
-        <div class="row align-items-lg-center">
-          <div class="txt col-lg-7 col-12">
+      <section class="section1 banner container d-flex align-items-md-center justify-content-md-center">
+        <div class="row align-items-md-center">
+          <div class="txt col-xl-7 col-md-6 col-12">
             <p data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="h1">Our Blogs</p>
           </div>
-          <div class="col-lg-5 col-12 d-flex justify-content-center justify-content-lg-end">
+          <div class="col-md-6 col-xl-5 col-12 d-flex justify-content-center justify-content-xl-end">
             <img src="../img/banner-3.png" alt="Blogs" class="img-fluid">
           </div>
         </div>
@@ -73,7 +76,7 @@
   </div>
   </div>
   <div class="background2 row justify-content-center">
-    <div class="col-lg-12 col-11 col-xl-10 mb-5">
+    <div class="col-md-12 col-11 col-xl-10 mb-5">
       <!-- section2 start-->
       <section class="section2 container pt-5 mb-5 pb-lg-5">
         <div class="row row-cols-1 row-cols-md-3 g-4">
