--- a/html/trusted-partners.html
+++ b/html/trusted-partners.html
@@ -2,188 +2,193 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Trusted Partners &#8211; CHARGEBACKHERO</title>
- <link rel="icon" type="image/png" href="../img/icon.png" />
- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
- <link rel="stylesheet" href="../css/style.css">
- <link rel="stylesheet" href="../css/header-footer.css">
- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trusted Partners &#8211; CHARGEBACKHERO</title>
+  <link rel="icon" type="image/png" href="../img/icon.png" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/header-footer.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-W8L9J33S');</script>
-<!-- End Google Tag Manager -->
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-W8L9J33S');</script>
+  <!-- End Google Tag Manager -->
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8H855RL5W"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P8H855RL5W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-P8H855RL5W');
-</script>
+    gtag('config', 'G-P8H855RL5W');
+  </script>
 
 </head>
 
 <body class="partners">
 
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W8L9J33S"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W8L9J33S" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
- <!-- Header Start-->
- <nav class="navbar navbar-expand-xl navbar-light header">
-  <div class="container">
-   <a class="navbar-brand sml" href="../index.html">
-    <img class="img-fluid sm-logo" src="../img/logo-sm.png" alt="logo">
-   </a>
-   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-   </button>
-   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-     <li class="nav-item">
-      <a class="nav-link" onclick="closeNavbar()" href="../index.html">Home</a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link" onclick="closeNavbar()" href="./features.html">Features</a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link" onclick="closeNavbar()" href="./faqs.html">FAQs</a>
-     </li>
-     <li class="nav-item lrg">
-      <a class="navbar-brand lrg-logo" href="../index.html"><img src="../img/logo.png" alt="Logo" width="253" height="69"></a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link" onclick="closeNavbar()" href="../cbms/login.html">Member Login</a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link" onclick="closeNavbar()" href="./contact-us.html">Contact Us</a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link show" onclick="closeNavbar()" href="./trusted-partners.html">Trusted Partners</a>
-     </li>
-    </ul>
-   </div>
-  </div>
- </nav>
- <!-- Header End -->
-
- <!-- Section 1 Start -->
- <div class="row justify-content-center mt-3 spacer">
-  <div class="col-xl-11 col-xxl-10 col-md-12 col-12">
-   <section class="section1 container-fluid container-xl">
-    <p data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="mb-3">Trusted Partners</p>
-    <h2 data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="mb-3">At Chargeback Hero We Value Partnering</h2>
-    <p data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="mb-3">Chargeback Hero</p>
-    <p data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="mb-3">At Chargeback Hero We Value Partnering With <br>Businesses Who We Trust And Find To Be Valuable <br>Assets To Our Clients. Please Find Contacts To <br>Some Of Our Highlighted Trusted Partners Below.</p>
-    <div class="row">
-     <div class="col-md-6 col-12 mb-3 mb-md-0" data-aos="fade-right" data-aos-offset="100" data-aos-duration="2000">
-      <img class="img-fluid rounded" src="../img/partners-1.webp" alt="partners-1">
-     </div>
-     <div class="col-md-6 col-12" data-aos="fade-left" data-aos-offset="100" data-aos-duration="2000">
-      <img class="img-fluid rounded" src="../img/partners-2.webp" alt="partners-2">
-     </div>
-    </div>
-   </section>
-  </div>
- </div>
- <!-- Section 1 End -->
-
- <!-- Section 8 Start -->
- <div class="row justify-content-center mb-5 index">
-  <div class="col-xl-11 col-xxl-10 col-md-12 col-12">
-   <section class="section8 container-fluid container-xl">
-    <div class="row">
-     <div class="col-md-5 col-12 text-center text-md-start" data-aos="fade-right" data-aos-offset="100" data-aos-duration="2000">
-      <p class="grn">I Want To Protect</p>
-      <h2 class="m-0 text-center">My Business Against</h2>
-      <div class="container">
-       <div id="carouselSlider" class="carousel slide">
-        <div class="carousel-inner">
-         <div class="carousel-item active text-center">
-          <h2>Friendly Fraud</h2>
-         </div>
-         <div class="carousel-item text-center">
-          <h2>Chargebacks</h2>
-         </div>
-         <div class="carousel-item text-center">
-          <h2>Lost Revenue</h2>
-         </div>
-         <div class="carousel-item text-center">
-          <h2>Disputes</h2>
-         </div>
-        </div>
-       </div>
+  <!-- Header Start-->
+  <nav class="navbar navbar-expand-xl navbar-light header">
+    <div class="container">
+      <a class="navbar-brand sml" href="../index.html">
+        <img class="img-fluid sm-logo" src="../img/logo-sm.png" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle " href="../html/features.html" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">Features</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
+              <li><a class="dropdown-item" href="../html/blogs.html">Blogs</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../html/faqs.html">FAQs</a>
+          </li>
+          <li class="nav-item lrg">
+            <a class="navbar-brand lrg-logo" href="../index.html"><img src="../img/logo.png" alt="Logo" width="253" height="69"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../cbms/login.html">Member Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../html/contact-us.html">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link show" href="../html/trusted-partners.html">Trusted Partners</a>
+          </li>
+        </ul>
       </div>
-      <p class="mt-3 mb-3">Enter Your Information And One Of Our Heroes Will Get In Touch</p>
-      <div class="icons">
-       <a class="fa-brands fa-facebook" target="_blank" href="https://www.facebook.com/ChargebackHero/"></a>
-       <a class="fa-brands fa-twitter" target="_blank" href="https://twitter.com/Chargebackheros"></a>
-       <a class="fa-brands fa-instagram" target="_blank" href="https://www.instagram.com/chargebackhero/"></a>
-       <a class="fa-brands fa-linkedin" target="_blank" href="https://www.linkedin.com/organization/11135337/"></a>
-      </div>
-     </div>
-     <div class="col-md-7 col-12 text-center text-md-start px-4 mt-5 mt-md-0" data-aos="fade-left" data-aos-offset="100" data-aos-duration="2000">
-      <form action="https://getform.io/f/06ea15d0-c421-4289-9b32-e6419991db94" method="post" enctype="multipart/form-data">
-       <div class="row">
-        <div class="form-group col-md-6 col-12">
-         <label for="first-name" class="form-label">First Name *</label>
-         <input type="text" name="First-Name" autocomplete="on" class="form-control" id="first-name" required placeholder="Enter Your Name">
-        </div>
-        <div class="form-group col-md-6 col-12">
-         <label for="last-name" class="form-label">Last Name *</label>
-         <input type="text" name="Last-Name" autocomplete="on" class="form-control" id="last-name" required placeholder="Enter Your Last Name">
-        </div>
-       </div>
-       <div class="row">
-        <div class="form-group col-md-6 col-12">
-         <label for="company" class="form-label">Company *</label>
-         <input type="text" name="Company-Name" autocomplete="on" class="form-control" id="company" required placeholder="Enter Company Name">
-        </div>
-        <div class="form-group col-md-6 col-12">
-         <label for="phone" class="form-label">Phone *</label>
-         <input type="tel" name="Phone-Number" autocomplete="on" class="form-control" id="phone" required placeholder="Enter Phone">
-        </div>
-       </div>
-       <div class="row">
-        <div class="form-group col-12">
-         <label for="email" class="form-label">Email *</label>
-         <input type="email" name="Email-Address" autocomplete="on" class="form-control" id="email" required placeholder="Enter Email Address">
-        </div>
-       </div>
-       <button type="submit" class="btn btn-primary">Sign Up</button>
-      </form>
-     </div>
     </div>
-   </section>
+  </nav>
+  <!-- Header End -->
+
+  <!-- Section 1 Start -->
+  <div class="row justify-content-center mt-3 spacer">
+    <div class="col-xl-11 col-xxl-10 col-md-12 col-12">
+      <section class="section1 container-fluid container-xl">
+        <p data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="mb-3">Trusted Partners</p>
+        <h2 data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="mb-3">At Chargeback Hero We Value Partnering</h2>
+        <p data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="mb-3">Chargeback Hero</p>
+        <p data-aos="fade-right" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-sine" class="mb-3">At Chargeback Hero We Value Partnering With <br>Businesses Who We Trust And Find To Be Valuable <br>Assets To Our Clients. Please Find Contacts To <br>Some Of Our Highlighted Trusted Partners Below.</p>
+        <div class="row">
+          <div class="col-md-6 col-12 mb-3 mb-md-0" data-aos="fade-right" data-aos-offset="100" data-aos-duration="2000">
+            <img class="img-fluid rounded" src="../img/partners-1.webp" alt="partners-1">
+          </div>
+          <div class="col-md-6 col-12" data-aos="fade-left" data-aos-offset="100" data-aos-duration="2000">
+            <img class="img-fluid rounded" src="../img/partners-2.webp" alt="partners-2">
+          </div>
+        </div>
+      </section>
+    </div>
   </div>
- </div>
- <!-- Section 8 End -->
+  <!-- Section 1 End -->
 
- <!-- Footer start -->
- <footer class="text-center">
-  <p>© 2023 <a href="../index.html">chargebackhero.com</a> – All Rights Reserved</p>
- </footer>
- <!-- Footer End -->
+  <!-- Section 8 Start -->
+  <div class="row justify-content-center mb-5 index">
+    <div class="col-xl-11 col-xxl-10 col-md-12 col-12">
+      <section class="section8 container-fluid container-xl">
+        <div class="row">
+          <div class="col-md-5 col-12 text-center text-md-start" data-aos="fade-right" data-aos-offset="100" data-aos-duration="2000">
+            <p class="grn">I Want To Protect</p>
+            <h2 class="m-0 text-center">My Business Against</h2>
+            <div class="container">
+              <div id="carouselSlider" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active text-center">
+                    <h2>Friendly Fraud</h2>
+                  </div>
+                  <div class="carousel-item text-center">
+                    <h2>Chargebacks</h2>
+                  </div>
+                  <div class="carousel-item text-center">
+                    <h2>Lost Revenue</h2>
+                  </div>
+                  <div class="carousel-item text-center">
+                    <h2>Disputes</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p class="mt-3 mb-3">Enter Your Information And One Of Our Heroes Will Get In Touch</p>
+            <div class="icons">
+              <a class="fa-brands fa-facebook" target="_blank" href="https://www.facebook.com/ChargebackHero/"></a>
+              <a class="fa-brands fa-twitter" target="_blank" href="https://twitter.com/Chargebackheros"></a>
+              <a class="fa-brands fa-instagram" target="_blank" href="https://www.instagram.com/chargebackhero/"></a>
+              <a class="fa-brands fa-linkedin" target="_blank" href="https://www.linkedin.com/organization/11135337/"></a>
+            </div>
+          </div>
+          <div class="col-md-7 col-12 text-center text-md-start px-4 mt-5 mt-md-0" data-aos="fade-left" data-aos-offset="100" data-aos-duration="2000">
+            <form action="https://getform.io/f/06ea15d0-c421-4289-9b32-e6419991db94" method="post" enctype="multipart/form-data">
+              <div class="row">
+                <div class="form-group col-md-6 col-12">
+                  <label for="first-name" class="form-label">First Name *</label>
+                  <input type="text" name="First-Name" autocomplete="on" class="form-control" id="first-name" required placeholder="Enter Your Name">
+                </div>
+                <div class="form-group col-md-6 col-12">
+                  <label for="last-name" class="form-label">Last Name *</label>
+                  <input type="text" name="Last-Name" autocomplete="on" class="form-control" id="last-name" required placeholder="Enter Your Last Name">
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group col-md-6 col-12">
+                  <label for="company" class="form-label">Company *</label>
+                  <input type="text" name="Company-Name" autocomplete="on" class="form-control" id="company" required placeholder="Enter Company Name">
+                </div>
+                <div class="form-group col-md-6 col-12">
+                  <label for="phone" class="form-label">Phone *</label>
+                  <input type="tel" name="Phone-Number" autocomplete="on" class="form-control" id="phone" required placeholder="Enter Phone">
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group col-12">
+                  <label for="email" class="form-label">Email *</label>
+                  <input type="email" name="Email-Address" autocomplete="on" class="form-control" id="email" required placeholder="Enter Email Address">
+                </div>
+              </div>
+              <button type="submit" class="btn btn-primary">Sign Up</button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+  <!-- Section 8 End -->
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
- <script src="../js/header.js" defer></script>
- <script src="../js/carousel.js" defer></script>
- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
- <script>
-  AOS.init({ once: true });
- </script>
+  <!-- Footer start -->
+  <footer class="text-center">
+    <p>© 2023 <a href="../index.html">chargebackhero.com</a> – All Rights Reserved</p>
+  </footer>
+  <!-- Footer End -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+  <script src="../js/header.js" defer></script>
+  <script src="../js/carousel.js" defer></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({ once: true });
+  </script>
 </body>
 
 </html>
